I corrected aligns and hr in Shipping method section

--- a/src/app/(pages)/checkout/CheckoutPage/PaymentMethods/index.module.scss
+++ b/src/app/(pages)/checkout/CheckoutPage/PaymentMethods/index.module.scss
@@ -24,3 +24,9 @@
 .payment {
   margin-bottom: 30px;
 }
+
+.hr {
+  margin-top: 48px;
+  margin-bottom: 48px;
+  border-top: 1px solid lightgray;
+}
