--- a/src/app/(pages)/checkout/CheckoutPage/ShippingMethods/index.module.scss
+++ b/src/app/(pages)/checkout/CheckoutPage/ShippingMethods/index.module.scss
@@ -13,6 +13,7 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 .title { 
     padding-bottom: 30px;
@@ -75,10 +76,8 @@
     }
 }
 
-.dpd { 
-    background-image: url("https://jakimkurierem.pl/logo_kuriera/dpd_logo.png");
-    height: 600px;
-    background-size: cover;
-    
+.hr {
+  margin-top: 36px;
+  margin-bottom: 36px;
+  border-top: 1px solid lightgray;
 }
-
